Rev.5 Revised the headings of the 2 notebooks

--- a/setup_n_simulate_1D_1part.ipynb
+++ b/setup_n_simulate_1D_1part.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Physics-based Digital Twin: Active Particle Motility\n",
     "\n",
-    "The idea of this notebook is to create a very simple setup and do a very simple simulation of active particles without the consideration of collision."
+    "The idea of this notebook is to create a very simple setup and do a very simple simulation of active particles without any other considerations."
    ]
   },
   {
