--- a/setup_n_simulate_1D_npart.ipynb
+++ b/setup_n_simulate_1D_npart.ipynb
@@ -5,9 +5,9 @@
    "id": "4be01ad4",
    "metadata": {},
    "source": [
-    "# Physics-based Digital Twin: Active Particle Motility\n",
+    "# Physics-based Digital Twin: Active N Particle Motility\n",
     "\n",
-    "The idea of this notebook is to create a very simple setup and do a very simple simulation of active particles without the consideration of collision."
+    "The idea of this notebook is to create a very simple setup and do a very simple simulation of active particles without any other considerations."
    ]
   },
   {
