Rev.10 Revised the code cell all identical for better statement.

--- a/setup_n_simulate_1D_npart_with_boun_with_low_RE_fluid_with_coll.ipynb
+++ b/setup_n_simulate_1D_npart_with_boun_with_low_RE_fluid_with_coll.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Physics-based Digital Twin: Active Particle Motility\n",
     "\n",
-    "The idea of this notebook is to create a very simple setup and do a very simple simulation of active particles with Neumann boundary condition without collision. An extra ddition to the above setup is now the introduction of low Re fluid flows.\n"
+    "The idea of this notebook is to create a very simple setup and do a very simple simulation of active particles with Neumann boundary condition with SIMPLE ELASTIC collision. An extra ddition to the above setup is now the introduction of low Re fluid flows.\n"
    ]
   },
   {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6174dff1",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
     "# Tube length\n",
     "L = 5.0  # tube length in m\n",
     "\n",
-    "# Optional: reproducible results\n",
+    "#  For reproducible results\n",
     "np.random.seed(42)\n",
     "\n",
     "# Walls control (activate/deactivate)\n",
