--- a/setup_n_simulate_1D_npart_with_boundaries.ipynb
+++ b/setup_n_simulate_1D_npart_with_boundaries.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6174dff1",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
     "# Tube length\n",
     "L = 5.0  # tube length\n",
     "\n",
-    "# Optional: reproducible results\n",
+    "# For reproducible results\n",
     "np.random.seed(42)\n",
     "\n",
     "# Walls control (activate/deactivate)\n",
